<resources>
    <string name="app_name">MayTheForceBeWith_Gustavo</string>

    <string name="placeholderText">Loading…</string>

    <string name="hint_search">Search</string>

    <string name="label_height">Height</string>
    <string name="label_mass">Mass</string>
    <string name="label_hair_color">Hair Color</string>
    <string name="label_skin_color">Skin Color</string>
    <string name="label_gender">Gender</string>
    <string name="details">Details</string>
    <string name="favorite_image_content_description">Favorite image</string>
</resources>
